--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-errors": ">=1.6.3",
     "morgan": ">=1.9.1",
     "mysql2": "^3.2.0",
+    "nodemailer": "^6.9.1",
     "pug": ">=2.0.0",
     "sequelize": "^6.30.0"
   },
